Fixed overflow of main content area and removed vertical line in utilities
It is a usual problem to have content overflow when using class `govuk-grid-column-full-width`. Fixed it temporarily with custom CSS. Also removed the vertical line next to the sign out link.

--- a/assets/sass/components/_header-bar.scss
+++ b/assets/sass/components/_header-bar.scss
@@ -87,4 +87,8 @@
 
 .refer-and-monitor-header {
   border-bottom: 0;
+
+  #user-block div:not(:last-child) {
+    border: 0;
+  }
 }
